fix email verification popup text

--- a/frontend/src/shared/lib/i18n/locales/ru/translation.json
+++ b/frontend/src/shared/lib/i18n/locales/ru/translation.json
@@ -109,6 +109,7 @@
     "emailVerification": {
       "popup": {
         "error": "Произошла ошибка, попробуйте еще раз.",
+        "success": "Ваша почта успешно подтверждена.",
         "successVerify": "Ваша почта успешно подтверждена.",
         "successSend": "Код подтверждения успешно отправлен на почту.",
         "resetSuccess": "Код подтверждения успешно отправлен на почту.",
